TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add filtering to WMI module
 * Fix WMI module
 * Fix PDH problems
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2007-09-15 MickeM
 + Added better error messages (now returncodes are displayed as text). Not implemented all over yet but the infrastructure is there.

2007-09-11 MickeM
 + Added Dutch performance counters to counters.defs
 + Added Spanish performance counters to counters.defs
 + Added #69 [includes] directive to INI-file to include other files
 * Fixed #75 (spelling issue)

2007-06-23 MickeM
 * Might have fixed #53 I was not able to get the problem locally but I have fixed the problem ias at op5 discovered atleast...
 * Fixed the "check memory" issues for real this time.
 * Fixed problem with : in counter names #50 (anything starts with \ is considerd a counter so if you use aliases with \ this will break things for you.

2007-06-20 MickeM
 * Fixed #24 crash in NSClient++.exe CheckSystem listpdh | debugpdh
 * Fixed #62 Problems with CheckServiceState and services with spaces.

2007-03-06 MickeM
 ! 0.2.7 released

2007-03-05 MickeM
 * Fixed -v FILEAGE check_nt (NSClient) check.
 * Added licence agreement header to all files

2007-03-04 MickeM
 + Added script_dir option to NRPE scetion as well as some sample scripts in the scripts/
   subdirectory. The script_dir will use all files in this directory as scripts for NRPE
 + Added japanese counters to counters.defs from patch (thanx!!!)

2007-02-25 MickeM
 + Added possibility to check many memory checks in one go, just stack type options.
     type=paged type=physical etc...
 * Fixed a performance check bug in the last nightly.
 * Fixed a potential crash when a maleformed check-file-age command was issued.
 + Added support for more then and NSClient command